<resources>
    <string name="app_name">Projet Android Wattin</string>
    <string name="main_login">Connexion à l\'application</string>
    <string name="mail">Adresse email</string>
    <string name="pwd">Mot de passe</string>
    <string name="main_creercompte">Pas de compte ? Cliquez ici</string>
    <string name="main_connexion">Connexion</string>
    <string name="sinscrire">S\'inscrire</string>
    <string name="createAcc_inscr">Inscription</string>
    <string name="createAcc_prenom">Prénom</string>
    <string name="createAcc_nom">Nom</string>
    <string name="home">Accueil</string>
    <string name="connectedAs">Vous êtes connecté en tant que : </string>
    <string name="editusers">Modifier les droits des utilisateurs ></string>
    <string name="incorrectlogin">Adresse email ou mot de passe incorrect</string>
    <string name="userlistcontent">Liste des utilisateurs  Droit 1 = lecture; Droit 2 = lecture/écriture</string>
    <string name="whichrights">Quels droits voulez-vous appliquer à l\'utilisateur</string>
    <string name="confirmation">Valider</string>
    <string name="cancelDialog">Annuler</string>
    <string name="emptyDB">Base de données vide !</string>
    <string name="impossibleEditSUrights">Impossible de modifier les droits du SuperUser</string>
    <string name="editSUpwd">Modifier le mot de passe SuperAdmin</string>
    <string name="enterNewSU">Entrez le nouveau mot de passe du compte SuperUtilisateur</string>
    <string name="newPwd">Nouveau mot de passe</string>
    <string name="conf">Confirmation</string>
    <string name="cr_ation_du_compte_administrateur">Création du compte Administrateur</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmation_du_mot_de_passe">Confirmation du mot de passe</string>
    <string name="param_tres_ip_de_l_automate">Paramètres IP de l\'automate</string>
    <string name="comprim_s">Comprimés</string>
    <string name="liquide">Liquide</string>
    <string name="adresse_ip">Adresse IP</string>
    <string name="rack">Rack</string>
    <string name="slot">Slot</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="lecture_de_l_asservissement">Lecture de l\'asservissement</string>
    <string name="plc">PLC : ???</string>
    <string name="niveau_de_liquide">Niveau de liquide : ??</string>
    <string name="consigne_auto">Consigne Auto : ??</string>
    <string name="consigne_manuelle">Consigne Manuelle : ??</string>
    <string name="pilotage_vanne">Pilotage vanne : ??</string>
    <string name="lecture_des_comprim_s">Lecture des comprimés</string>
    <string name="en_service">En service :</string>
    <string name="comprim_s_par_bouteille">Comprimés par bouteille : ??</string>
    <string name="nombre_de_bouteilles_produites">Nombre de bouteilles produites : ??</string>
    <string name="ecriture_de_donn_es">Ecriture de données</string>
    <string name="valeur_envoyer">Valeur à envoyer</string>
    <string name="dbb">DBB</string>
    <string name="envoyer_les_donn_es">Envoyer les données</string>
    <string name="vous_tes_connect_en_tant_que">vous êtes connecté en tant que :</string>
    <string name="nom_conditionnement_de_pillules">Nom : Conditionnement de pillules</string>
    <string name="ip_192_168_0_15">IP : 192.168.0.15</string>
    <string name="rack_0">Rack : 0</string>
    <string name="slot_2">Slot : 2</string>
    <string name="acc_der_l_automate">Accéder à l\'automate</string>
    <string name="acc_der_l_api">Accéder à l\'API</string>
    <string name="nom_asservissement_de_liquide">Nom : Asservissement de liquide</string>
    <string name="connexion">Connexion</string>
    <string name="modifier_les_param_tres_de_connexion">Modifier les paramètres de connexion</string>
</resources>
