<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/lightBlue">

    <ImageView
        android:id="@+id/ic_account_box_black_24dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_add_box_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:text="@string/createAcc_inscr"
        android:textSize="30dp" />


    <EditText
        android:id="@+id/et_creacc_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createAcc_nom"
        />

    <EditText
        android:id="@+id/et_creacc_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createAcc_prenom"
        />

    <EditText
        android:id="@+id/et_creacc_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"
        />

    <EditText
        android:id="@+id/et_creacc_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pwd"
        />


    <Button
        android:id="@+id/bt_creacc_inscr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCreateAccClickManager"
        android:text="@string/sinscrire" />
</LinearLayout>
