<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/lightBlue">

    <ImageView
        android:id="@+id/iv_readdatas_status"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_adb_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:text="@string/lecture_des_comprim_s"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_readdatas_plc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:text="@string/plc"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_readdatas_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:text="@string/en_service"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tv_readdatas_pillsamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:text="@string/comprim_s_par_bouteille"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_readdatas_fullBottles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/nombre_de_bouteilles_produites"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_readdatas_writedatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ecriture_de_donn_es"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_readdatas_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="number"
        android:hint="@string/valeur_envoyer"
        />

    <EditText
        android:id="@+id/et_readdatas_dbb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="number"
        android:hint="@string/dbb"
        />

    <Button
        android:id="@+id/bt_readdatas_ConnexS7"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onReadDatasClickManager"
        android:text="Connexion" />

    <Button
        android:id="@+id/bt_readdatas_pushdata"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onReadDatasClickManager"
        android:text="@string/envoyer_les_donn_es" />


</LinearLayout>