<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/adminRed">

    <ImageView
        android:id="@+id/ic_account_box_black_24dp"
        android:layout_width="97dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_vpn_key_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false"
        android:text="@string/cr_ation_du_compte_administrateur"
        android:textAlignment="center"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/et_createadmin_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nom" />

    <EditText
        android:id="@+id/et_createadmin_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pr_nom" />

    <EditText
        android:id="@+id/et_createadmin_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/et_createadmin_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/mot_de_passe"/>

    <EditText
        android:id="@+id/et_createadmin_pwdconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirmation_du_mot_de_passe"/>

    <Button
        android:id="@+id/bt_createadmin_confirm"
        style="@android:style/Widget.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onCreateAdminClickManager"
        android:text="Valider" />


</LinearLayout>
